--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="0; url=007.html" />
+    <script>window.location.href = "007.html";</script>
+    <title>Redirecting...</title>
   </head>
-  <body></body>
+  <body>
+    If you're not redirected, <a href="007.html">click here</a>.
+  </body>
 </html>
