--- a/007.html
+++ b/007.html
@@ -84,6 +84,14 @@
         </svg>
         GitHub
       </a>
+
+      <a href="https://www.youtube.com/@tarppss" target="_blank" class="btn" aria-label="YouTube Channel">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="currentColor" class="social-icon">
+      <path d="M549.7 124.1c-6.3-23.7-24.9-42.3-48.6-48.6C458.7 64 288 64 288 64s-170.7 0-213.1 11.5c-23.7 6.3-42.3 24.9-48.6 48.6C16 166.5 16 256 16 256s0 89.5 10.3 131.9c6.3 23.7 24.9 42.3 48.6 48.6C117.3 448 288 448 288 448s170.7 0 213.1-11.5c23.7-6.3 42.3-24.9 48.6-48.6 10.3-42.4 10.3-131.9 10.3-131.9s0-89.5-10.3-131.9zM232 336V176l142.7 80L232 336z"/>
+    </svg>
+    YouTube
+  </a>
+</div>
     </div>
 
     <div class="discord-box fade-in" aria-live="polite">
@@ -109,8 +117,11 @@
   ></iframe>
 </div>
 
+<footer>
+    Coded by 007
+  </footer>
 
-  <script>
+<script>
     window.addEventListener('load', () => {
       const preloader = document.getElementById('preloader');
       preloader.style.opacity = '0';
