--- a/007.html
+++ b/007.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>007</title>
 
-  <meta name="description" content="Personal bio website of 0x007 – coder, gamer, creator. Connect on Discord, Roblox, GitHub, and more." />
-  <meta property="og:title" content="0x007 | gooner.lol/007" />
-  <meta property="og:description" content="Personal bio website of 0x007 – coder, gamer, creator." />
+  <meta name="description" content="007" />
+  <meta property="og:title" content="0x007 | systrace.tech/007" />
+  <meta property="og:description" content="007" />
   <meta property="og:image" content="public/song-art.jpg" />
-  <meta property="og:url" content="https://gooner.lol/007" />
+  <meta property="og:url" content="https://systrace.tech/007.html" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <link rel="stylesheet" href="public/style.css" />
