--- a/007.html
+++ b/007.html
@@ -49,7 +49,7 @@
   </div>
 
   <video autoplay muted loop id="bg-video" playsinline>
-    <source src="public/video-bg.mp4" type="video/mp4" />
+    <source src="/video-bg.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
 
