--- a/007.html
+++ b/007.html
@@ -53,10 +53,6 @@
     Your browser does not support the video tag.
   </video>
 
-  <audio autoplay loop id="bg-music">
-    <source src="public/song.mp3" type="audio/mp3" />
-  </audio>
-
   <button id="dark-mode-toggle" aria-label="Toggle Dark Mode">🌙</button>
 
   <main class="fade-in">
@@ -91,6 +87,13 @@
     </svg>
     YouTube
   </a>
+  <a href="https://only-fans.uk/007" target="_blank" class="btn" aria-label="OnlyFans Profile">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" fill="currentColor" class="social-icon">
+    <path d="M320 32C145 32 0 177 0 352s145 320 320 320 320-145 320-320S495 32 320 32zm146.3 213.6c-10.3-29.3-32.5-50.6-66.4-61.1-47.4-15-102.6-7.1-145.3 23.3-27.3 19.6-48.6 46.3-61.1 77.6-2.6 6.3-4.9 12.6-6.9 18.9-8.9 27.8-13.8 56.4-16.3 84.6-2.7 31.1 1.6 62.4 12.5 92.5 7.8 21.2 18.8 40.9 32.5 58.1 3.8 4.7 8.3 9.2 13.1 13.1 13.7 11.1 30.7 18.4 48.3 21.3 4.5.7 9.1.9 13.6.9 25.4 0 50.4-11.3 71.1-30.3 20.6-19 34.6-45.5 40.9-73.6 7.2-33 5.1-68.7-4.9-100.7-5.6-18.4-13.3-36.3-24.3-52.1-7.2-10.5-16.1-20.2-27.1-28.3-6.5-4.9-13.5-9.2-21.1-12.6zm-116.2 182.2c-38.3 0-69.4-31.1-69.4-69.4s31.1-69.4 69.4-69.4 69.4 31.1 69.4 69.4-31.1 69.4-69.4 69.4z"/>
+  </svg>
+  OnlyFans
+</a>
+
 </div>
     </div>
 
