--- a/007.html
+++ b/007.html
@@ -105,7 +105,7 @@
         </svg>
         Roblox
       </a>
-      <a href="https://discord.com/users/1380290283639541892" target="_blank" class="btn" aria-label="Discord Profile">
+      <a href="https://discord.gg/SEE5GPMa5F" target="_blank" class="btn" aria-label="Discord Profile">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245 240" fill="currentColor" class="social-icon">
           <path d="M104.4 108.8c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.3-5 10.2-11.1 0-6.2-4.6-11.1-10.2-11.1zm36.2 0c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.3-5 10.2-11.1-.1-6.2-4.6-11.1-10.2-11.1z"/>
           <path d="M189.5 20h-134C39.6 20 30 29.7 30 42v128c0 12.3 9.6 22 21.5 22h105.5l-5-17 12 11 11 10 20 18V42c0-12.3-9.6-22-21.5-22zM164 157s-6.8-8.1-12.5-15.2c24.8-7.1 34.1-22.5 34.1-22.5-7.7 5.2-15 8.9-21.5 11.5-9.3 4-18.2 6.6-27 8-11.3 1.9-21.7 1.5-30.9-.1-6.7-1.2-12.5-2.9-17.4-4.6-0.8-0.3-1.6-0.5-2.4-0.8-0.2-0.1-0.4-0.1-0.5-0.2-0.1 0-0.1 0-0.2-0.1-0.7-0.2-1.1-0.3-1.1-0.3s9 15.2 32.5 22.7c-5.7 7-12.7 15.4-12.7 15.4-42.1-2-58-29-58-29 0-61.4 27.5-111.2 27.5-111.2 27.5-20.6 53.6-20 53.6-20l2 2.3c-34.4 9.9-50.3 24.8-50.3 24.8s4.2-2.3 11.3-5.4c20.6-8.7 37-11 43.8-11.6 1 0 1.9-0.1 2.9-0.1 0.9 0 1.8 0 2.7 0.1 6.7 0.6 23.1 2.9 43.7 11.6 7 3.1 11.2 5.4 11.2 5.4s-15.6-15.1-49.9-24.8l2.8-3.2s26.2-0.6 53.6 20c0 0 27.5 49.8 27.5 111.2 0 0-15.8 27-58 29z"/>
