Update footer to include animation creditF
Added a line to footer to credit ChatGPT for animations.

--- a/007.html
+++ b/007.html
@@ -159,8 +159,10 @@
 </div>
 
 <footer>
-    Coded by 007
-  </footer>
+  Coded by 007  
+  <br />
+  <small>(yes animations are made by ChatGPT, idk how to do those fr)</small>
+</footer>
 
 <script>
   const bootOverlay = document.getElementById("boot-overlay");
