Update heading text in 007.html

--- a/007.html
+++ b/007.html
@@ -94,7 +94,7 @@
   <button id="dark-mode-toggle" aria-label="Toggle Dark Mode">🌙</button>
 
   <main class="fade-in">
-    <h1 class="name">0x007</h1>
+    <h1 class="name">0x007 / joe bart and salah glazer 67</h1>
     <p class="tagline" id="typewriter"></p>
     <p class="description">professional pussy eater</p>
 
